--- a/intex.html
+++ b/intex.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>THIS IS VAN</title>
-</head>
-<body>First time try out developing website
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
-</html>
+<h1>hello world</h1>
