--- a/index.html
+++ b/index.html
@@ -24,16 +24,15 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>>Delivrost</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Delivrost</h1>
+								
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
+								<li><a href="#Browse Products">Intro</a></li>
+								<li><a href="#Generated Shopping List">Work</a></li>
+								<li><a href="#Specials & Catalogue">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
